freesia/k8s/apps/temporis/thanos-store/service-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: thanos-store-http
  labels:
    app.kubernetes.io/name: thanos-store

spec:
  type: ClusterIP
  ports:
    - port: 10902
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: thanos-store
